--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongodb": "^4.8.1",
     "mongoose": "^6.4.7",
     "redis": "^4.2.0",
-    "socket.io": "^4.5.1"
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
     "typescript": "^4.7.4"
