--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aws-sdk": "^2.1182.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
+    "express": "^4.18.2",
     "joi": "^17.6.0",
     "mongodb": "^4.8.1",
     "mongoose": "^6.4.7",
@@ -22,6 +23,7 @@
     "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "typescript": "^4.7.4"
   },
   "optionalDependencies": {
